tagging forked by information

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -6,8 +6,9 @@ __      _| | ___   __ _  ___  _   _| |_
   \_/\_/ |_|\___/ \__, |\___/ \__,_|\__| 
                   |___/                  
  
-by Stephan Raabe (2023) 
------------------------------------------------------ 
+ by Stephan Raabe (2023) 
+ Forked by Corrie Tilcock (10/2023)
+ ----------------------------------------------------- 
 */
 
 /* -----------------------------------------------------
