--- a/waybar/themes/ml4w/style.css
+++ b/waybar/themes/ml4w/style.css
@@ -7,6 +7,7 @@
  *                 |___/                              |___/         
  *  
  * by Stephan Raabe (2023) 
+ * Forked by Corrie Tilcock (10/2023)
  * ----------------------------------------------------- 
 */
 
