--- a/waybar/themes/ml4w-blur/style.css
+++ b/waybar/themes/ml4w-blur/style.css
@@ -27,10 +27,9 @@
 }
 
 window#waybar {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.2);
     border-bottom: 0px solid #ffffff;
     /* color: #FFFFFF; */
-    background: transparent;
     transition-property: background-color;
     transition-duration: .5s;
 }
@@ -41,14 +40,14 @@ window#waybar {
 
 #workspaces {
     background: @workspacesbackground1;
-    margin: 2px 1px 3px 1px;
+    margin: 6px 0px 6px 0Vpx;
     padding: 0px 1px;
     border-radius: 5px;
     border: 0px;
     font-weight: bold;
     font-style: normal;
     opacity: 0.8;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor1;
 }
 
@@ -101,11 +100,11 @@ tooltip label {
 
 #window {
     background: @backgroundlight;
-    margin: 5px 15px 5px 0px;
+    margin: 6px 15px 6px 0px;
     padding: 2px 10px 0px 10px;
     border-radius: 5px;
     color:@textcolor2;
-    font-size:14px;
+    font-size:16px;
     font-weight:normal;
     opacity:0.8;
 }
@@ -119,11 +118,9 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #taskbar {
-    /* background: @color11; */
     background: @backgroundlight;
-    margin: 3px 15px 3px 0px;
+    margin: 6px 15px 6px 0px;
     padding:0px;
-    /*padding: 2px 3px 1px 3px;*/
     border-radius: 5px;
     font-weight: normal;
     font-style: normal;
@@ -153,17 +150,19 @@ window#waybar.empty #window {
  * Custom Quicklinks
  * ----------------------------------------------------- */
 
-#custom-brave,
-#custom-outlook,
-#custom-filemanager,
-#custom-teams,
-#custom-chatgpt,
-#custom-calculator,
-#custom-windowsvm,
-#custom-cliphist,
-#custom-wallpaper,
-#custom-waybarthemes,
-#custom-wf-recorder {
+#custom-brave, 
+#custom-browser, 
+#custom-keybindings, 
+#custom-outlook, 
+#custom-filemanager, 
+#custom-teams, 
+#custom-chatgpt, 
+#custom-calculator, 
+#custom-windowsvm, 
+#custom-cliphist, 
+#custom-wallpaper, 
+#custom-wallpaperwlr, 
+#custom-waybarthemes {
     margin-right: 20px;
     font-size: 20px;
     font-weight: bold;
@@ -171,7 +170,7 @@ window#waybar.empty #window {
     color: @iconcolor;
 }
 
-#custom-wallpaper {
+#custom-wallpaper, #custom-keybindings {
     margin-right:23px;
 }
 
@@ -181,11 +180,11 @@ window#waybar.empty #window {
 
 #custom-appmenu {
     background-color: @backgrounddark;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor1;
     border-radius: 5px;
     padding: 0px 10px 0px 10px;
-    margin: 3px 15px 3px 14px;
+    margin: 6px 15px 6px 14px;
     opacity:0.8;
     border:3px solid @bordercolor;
 }
@@ -207,11 +206,11 @@ window#waybar.empty #window {
 
 #custom-updates {
     background-color: @backgroundlight;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor2;
     border-radius: 5px;
     padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
+    margin: 6px 15px 6px 0px;
     opacity:0.8;
 }
 
@@ -235,26 +234,12 @@ window#waybar.empty #window {
 
 #custom-youtube {
     background-color: @backgroundlight;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor2;
     border-radius: 5px;
     padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
+    margin: 6px 15px 6px 0px;
     opacity:0.8;
-}
-
-/* -----------------------------------------------------
- * Audio Group
- * ----------------------------------------------------- */
-
-#pulseaudio-microphone,#pulseaudio,#bluetooth {
-    margin:5px;
-    padding:0px;
-    font-size:16px;
-    color:@iconcolor;
-}
-#bluetooth {
-    margin-right:10px;
 }
 
 /* -----------------------------------------------------
@@ -262,7 +247,7 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #disk,#memory,#cpu {
-    margin:5px;
+    margin:0px;
     padding:0px;
     font-size:16px;
     color:@iconcolor;
@@ -278,14 +263,29 @@ window#waybar.empty #window {
 
 #clock {
     background-color: @backgrounddark;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor1;
     border-radius: 5px;
     padding: 1px 10px 0px 10px;
-    margin: 3px 15px 3px 0px;
+    margin: 6px 15px 6px 0px;
     opacity:0.8;
     border:3px solid @bordercolor;   
 }
+
+/* -----------------------------------------------------
+ * Pulseaudio
+ * ----------------------------------------------------- */
+
+#pulseaudio-microphone,#pulseaudio,#bluetooth {
+    margin:5px;
+    padding:0px;
+    font-size:16px;
+    color:@iconcolor;
+}
+#bluetooth {
+    margin-right:10px;
+}
+
 
 /* -----------------------------------------------------
  * Network
@@ -293,11 +293,11 @@ window#waybar.empty #window {
 
 #network {
     background-color: @backgroundlight;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor2;
     border-radius: 5px;
     padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
+    margin: 6px 15px 6px 0px;
     opacity:0.8;
 }
 
@@ -312,16 +312,36 @@ window#waybar.empty #window {
 }
 
 /* -----------------------------------------------------
+ * Bluetooth
+ * ----------------------------------------------------- */
+
+ #bluetooth, #bluetooth.on, #bluetooth.connected {
+    background-color: @backgroundlight;
+    font-size:16px;
+    color: @textcolor2;
+    border-radius: 5px;
+    padding: 2px 10px 0px 10px;
+    margin: 6px 15px 6px 0px;
+    opacity:0.8;
+}
+
+#bluetooth.off {
+    background-color: transparent;
+    padding: 0px;
+    margin: 0px;
+}
+
+/* -----------------------------------------------------
  * Battery
  * ----------------------------------------------------- */
 
 #battery {
     background-color: @backgroundlight;
-    font-size: 14px;
+    font-size:16px;
     color: @textcolor2;
     border-radius: 5px;
     padding: 2px 15px 0px 10px;
-    margin: 5px 15px 5px 0px;
+    margin: 8px 15px 8px 0px;
     opacity:0.8;
 }
 
@@ -357,7 +377,7 @@ window#waybar.empty #window {
     color: @textcolor2;
     border-radius: 5px;
     padding: 2px 10px 0px 10px;
-    margin: 5px 15px 5px 0px;
+    margin: 6px 15px 6px 0px;
     opacity:0.8;
 }
 
