--- a/waybar/themes/ml4w/style.css
+++ b/waybar/themes/ml4w/style.css
@@ -153,7 +153,17 @@ window#waybar.empty #window {
  * Custom Quicklinks
  * ----------------------------------------------------- */
 
-#custom-brave, #custom-outlook, #custom-filemanager, #custom-teams, #custom-chatgpt, #custom-calculator, #custom-windowsvm, #custom-cliphist, #custom-wallpaper, #custom-waybarthemes, #custom-wf-recorder {
+#custom-brave,
+#custom-outlook,
+#custom-filemanager,
+#custom-teams,
+#custom-chatgpt,
+#custom-calculator,
+#custom-windowsvm,
+#custom-cliphist,
+#custom-wallpaper,
+#custom-waybarthemes,
+#custom-wf-recorder {
     margin-right: 20px;
     font-size: 20px;
     font-weight: bold;
