--- a/waybar/themes/ml4w-blur/style.css
+++ b/waybar/themes/ml4w-blur/style.css
@@ -40,7 +40,7 @@ window#waybar {
 
 #workspaces {
     background: @workspacesbackground1;
-    margin: 6px 0px 6px 0Vpx;
+    margin: 6px 0px 6px 0px;
     padding: 0px 1px;
     border-radius: 5px;
     border: 0px;
