--- a/waybar/themes/style.css
+++ b/waybar/themes/style.css
@@ -1,13 +1,23 @@
 /*
- * __        __          _                  ____  _         _       
- * \ \      / /_ _ _   _| |__   __ _ _ __  / ___|| |_ _   _| | ___  
- *  \ \ /\ / / _` | | | | '_ \ / _` | '__| \___ \| __| | | | |/ _ \ 
- *   \ V  V / (_| | |_| | |_) | (_| | |     ___) | |_| |_| | |  __/ 
- *    \_/\_/ \__,_|\__, |_.__/ \__,_|_|    |____/ \__|\__, |_|\___| 
- *                 |___/                              |___/         
- *  
- * by Stephan Raabe (2023) 
- * Forked by Corrie Tilcock (10/2023)
+ ██       ██                    ██
+░██      ░██            ██   ██░██
+░██   █  ░██  ██████   ░░██ ██ ░██       ██████   ██████
+░██  ███ ░██ ░░░░░░██   ░░███  ░██████  ░░░░░░██ ░░██░░█
+░██ ██░██░██  ███████    ░██   ░██░░░██  ███████  ░██ ░
+░████ ░░████ ██░░░░██    ██    ░██  ░██ ██░░░░██  ░██
+░██░   ░░░██░░████████  ██     ░██████ ░░████████░███
+░░       ░░  ░░░░░░░░  ░░      ░░░░░    ░░░░░░░░ ░░░
+
+  ████████   ██             ██
+ ██░░░░░░   ░██    ██   ██ ░██
+░██        ██████ ░░██ ██  ░██  █████
+░█████████░░░██░   ░░███   ░██ ██░░░██
+░░░░░░░░██  ░██     ░██    ░██░███████
+       ░██  ░██     ██     ░██░██░░░░
+ ████████   ░░██   ██      ███░░██████
+░░░░░░░░     ░░   ░░      ░░░  ░░░░░░
+
+ * by Sproggy (Corrie Tilcock) (2026)
  * ----------------------------------------------------- 
 */
 
