--- a/waybar/themes/style.css
+++ b/waybar/themes/style.css
@@ -22,7 +22,7 @@
 */
 
 /* -----------------------------------------------------
- * Import Pywal colors 
+ * Import Pywal16 colors 
  * ----------------------------------------------------- */
 /* @import 'style-light.css'; */
 
